; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/ppp/extr_physical.c_physical_Offline.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/ppp/extr_physical.c_physical_Offline.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.physical = type { %struct.TYPE_4__, %struct.TYPE_3__* }
%struct.TYPE_4__ = type { i32 }
%struct.TYPE_3__ = type { i32 (%struct.physical*)* }

@LogPHASE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [19 x i8] c"%s: Disconnected!\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @physical_Offline(%struct.physical* %0) #0 {
  %2 = alloca %struct.physical*, align 8
  store %struct.physical* %0, %struct.physical** %2, align 8
  %3 = load %struct.physical*, %struct.physical** %2, align 8
  %4 = getelementptr inbounds %struct.physical, %struct.physical* %3, i32 0, i32 1
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %6 = icmp ne %struct.TYPE_3__* %5, null
  br i1 %6, label %7, label %22

7:                                                ; preds = %1
  %8 = load %struct.physical*, %struct.physical** %2, align 8
  %9 = getelementptr inbounds %struct.physical, %struct.physical* %8, i32 0, i32 1
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i32 (%struct.physical*)*, i32 (%struct.physical*)** %11, align 8
  %13 = icmp ne i32 (%struct.physical*)* %12, null
  br i1 %13, label %14, label %22

14:                                               ; preds = %7
  %15 = load %struct.physical*, %struct.physical** %2, align 8
  %16 = getelementptr inbounds %struct.physical, %struct.physical* %15, i32 0, i32 1
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 0
  %19 = load i32 (%struct.physical*)*, i32 (%struct.physical*)** %18, align 8
  %20 = load %struct.physical*, %struct.physical** %2, align 8
  %21 = call i32 %19(%struct.physical* %20)
  br label %22

22:                                               ; preds = %14, %7, %1
  %23 = load i32, i32* @LogPHASE, align 4
  %24 = load %struct.physical*, %struct.physical** %2, align 8
  %25 = getelementptr inbounds %struct.physical, %struct.physical* %24, i32 0, i32 0
  %26 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 8
  %28 = call i32 @log_Printf(i32 %23, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i32 %27)
  ret void
}

declare dso_local i32 @log_Printf(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
